<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/BGR"
    android:clickable="false"
    tools:context=".RegistrationActivity"
    android:orientation="vertical"
    android:gravity="center">

    <ImageView
        android:id="@+id/reg_img"
        android:layout_width="match_parent"
        android:layout_height="216dp"
        android:layout_marginTop="50dp"
        android:src="@drawable/login_pic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/LOGO" />

    <EditText
        android:layout_marginTop="50dp"
        android:id="@+id/phone"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:background="@drawable/edittext_background"
        android:elevation="3dp"
        android:hint="@string/phoneNumber"
        android:padding="13dp"
        android:textColor="@color/MOST_TEXT"
        android:textColorHighlight="@color/MAIN"
        android:textColorHint="@color/MOST_TEXT"
        app:layout_constraintTop_toBottomOf="@+id/reg_img"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintWidth_percent=".8"
        android:inputType="text"/>

    <EditText
        android:id="@+id/name"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@drawable/edittext_background"
        android:drawablePadding="13dp"
        android:elevation="3dp"
        android:hint="@string/firstName"
        android:padding="13dp"
        android:textColor="@color/MOST_TEXT"
        android:textColorHighlight="@color/MAIN"
        android:textColorHint="@color/MOST_TEXT"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/phone"
        app:layout_constraintWidth_percent=".8"
        android:inputType="textEmailAddress"/>

    <EditText
        android:id="@+id/last_name"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@drawable/edittext_background"
        android:drawablePadding="13dp"
        android:elevation="3dp"
        android:hint="@string/lastName"
        android:padding="13dp"
        android:textColor="@color/MOST_TEXT"
        android:textColorHighlight="@color/MAIN"
        android:textColorHint="@color/MOST_TEXT"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/name"
        app:layout_constraintWidth_percent=".8" />

    <Button
        android:id="@+id/reg_btn"
        android:layout_width="254dp"
        android:layout_height="60dp"
        android:layout_marginTop="50dp"
        android:backgroundTint="@color/BUTTON_CLR"
        android:text="@string/registrationBtn"
        android:textAllCaps="true"
        android:textColor="@color/MAIN"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/last_name" />


</LinearLayout>